# grid_trading_bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  zensical.toml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: docs.yml  release.yml  run-tests-on-push-or-merge-pr-master.yml  unit_tests.yml
config/: config.json  config_manager.py  config_validator.py  exceptions.py
core/bot_management/: event_bus.py  grid_trading_bot.py  health_check.py
core/bot_management/bot_controller/: bot_controller.py
core/bot_management/notification/: notification_handler.py
core/grid_management/: grid_manager.py
core/order_handling/: balance_tracker.py  order_book.py  order_manager.py  order_simulator.py  order_status_tracker.py
core/order_handling/execution_strategy/: live_order_execution_strategy.py
core/services/: backtest_exchange_service.py  exchange_interface.py  live_exchange_service.py
docs/: index.md  quick-start.md
docs/architecture/: overview.md
docs/concepts/: grid-trading.md
docs/configuration/: config-file.md  environment-variables.md
docs/contributing/: guide.md
docs/monitoring/: grafana-dashboard.md  setup.md
docs/requirements/: batch_backtesting_architecture.md  batch_backtesting_requirements.md
docs/superpowers/plans/: 2026-03-18-grid-sweep.md
docs/usage/: cli.md  notifications.md
monitoring/configs/alloy/: config.alloy
monitoring/configs/loki/: loki.yaml  rules.yaml
monitoring/configs/promtail/: promtail.yaml
monitoring/dashboards/: grid_trading_bot_dashboard.json
scripts/: replay_logs.sh
src/grid_trading_bot/: __init__.py  __main__.py  cli.py
src/grid_trading_bot/config/: config_manager.py  config_validator.py
src/grid_trading_bot/strategies/: grid_trading_strategy.py  plotter.py  (+2 more)
strategies/: grid_trading_strategy.py  trading_strategy_interface.py
tests/: conftest.py
tests/bot_management/: test_bot_controller.py  test_event_bus.py  test_grid_trading_bot.py  test_health_check.py  test_notification_handler.py
tests/config/: test_config_manager.py  test_config_validator.py
tests/fixtures/: order_handling.py
tests/grid_management/: test_grid_level.py  test_grid_manager.py
tests/indicators/: test_atr_calculator.py
tests/integration/: conftest.py  snapshot_utils.py  test_backtest_e2e.py  test_sandbox_smoke.py
tests/order_handling/: test_backtest_order_execution_strategy.py  test_balance_tracker.py  test_buy_sell_cycle.py  test_fee_calculator.py  test_live_order_execution_strategy.py  test_order.py  test_order_book.py  test_order_execution_strategy_factory.py  test_order_manager.py  test_order_simulator.py  test_order_status_tracker.py
tests/persistence/: test_config_hash.py  test_serializers.py  test_sqlite_state_repository.py  test_state_persistence_service.py  test_state_recovery_service.py
tests/reconciliation/: test_reconciliation_service.py
tests/risk_management/: test_trailing_stop_loss.py
tests/services/: test_backtest_exchange_service.py  test_circuit_breaker.py  test_exchange_service_factory.py  test_live_exchange_service.py
tests/strategies/: test_grid_trading_strategy.py  test_plotter.py  test_trading_performance_analyzer.py
tests/utils/: test_arg_parser.py  test_config_name_generator.py  test_logging_config.py  test_performance_results_saver.py
tests/validation/: test_order_validator.py
utils/: arg_parser.py
(+43 files in other folders)
